Convert Button Alignment Fixed

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,6 +2,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+.container {
+    min-height: 95vh;
+}
+
 a {
     text-decoration: none;
 }
@@ -114,6 +118,7 @@ h1.title {
 }
 
 .form {
+    justify-content: center;
     height: 40px;
     display: flex;
     margin-bottom: 10px;
@@ -127,7 +132,7 @@ select {
 }
 
 input {
-    min-width: 396px;
+    min-width: 253px;
     border: 1px solid #ccc;
     text-align: center;
     margin-right: 10px;
